# pygwalker-desktop

./: .gitignore  ARCHITECTURE.md  QUICKSTART.md  README.md  WINDOWS_GUIDE.md  pyproject.toml  sample_data.csv
src/pygwalker_desktop/: __init__.py  __main__.py  app.py  main_window.py  web_view.py
src/pygwalker_desktop/data/: loader.py
src/pygwalker_desktop/server/: bridge.py  handler.py
src/pygwalker_desktop/widgets/: settings_dialog.py
