[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pygwalker-desktop"
version = "0.1.0"
description = "Desktop data visualization app powered by PyGWalker and PySide6"
requires-python = ">=3.10"
dependencies = [
    "pygwalker>=0.5.0.0",
    "PySide6>=6.8.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "pyarrow>=14.0.0",
]

[project.scripts]
pygwalker-desktop = "pygwalker_desktop.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pygwalker_desktop"]
